# cloudnative-gateway-demo

./: .gitignore  README.md
django-login/: Makefile  convertpem.py  krakend.json  publickey.json  requirements.txt
django-login/docker/: Dockerfile
django-login/k8s/: deployment.yaml  login-route.yaml  login-token-route.yaml  service.yaml
django-login/mariak8s/: mariadb-db.yaml  mariadb-pod.yaml  mariadb-secret.yaml
django-login/project/: settings.py  urls.py
django-login/project/login/: serializers.py  views.py
fastapi-llm/: pyproject.toml
fastapi-llm/docker/: Dockerfile
fastapi-llm/fastapi_p4/: llmserver.py
fastapi-llm/k8s/: deployment.yaml  service.yaml
gateway/: gateway.yaml  httproute-django.yaml  httproute-llm.yaml
krakend/: krakend-configmap.yaml  krakend-deployment.yaml  krakend-httproute.yaml  publickey.json
locusttest/: pyproject.toml
locusttest/locusttest/: locustfile.py
