[tool.poetry]
name = "locusttest"
version = "0.1.0"
description = ""
authors = ["Arav Agarwal <arava@andrew.cmu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.24.1"
coolname = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
